# elemental

./: README.md  meson.build
data/: gresource.xml  style.css
src/: Application.vala
src/widgets/: Intro.vala  Window.vala
